tests/ui/parser/issue-81804.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:6:11
   |
LL | fn p([=(}
   |     --    ^
   |     ||
   |     |unclosed delimiter
   |     unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-81804.rs:6:11
   |
LL | fn p([=(}
   |     --    ^
   |     ||
   |     |unclosed delimiter
   |     unclosed delimiter

error: mismatched closing delimiter: `}`
  --> $DIR/issue-81804.rs:6:8
   |
LL | fn p([=(}
   |        ^^ mismatched closing delimiter
   |        |
   |        unclosed delimiter

error: aborting due to 3 previous errors

