tests/ui/parser/issue-81804.rs
// error-pattern: this file contains an unclosed delimiter
// error-pattern: this file contains an unclosed delimiter

fn main() {}

fn p([=(}
